# DungeonCrawler

./: .gitignore  BUILD-WEB.md  CMakeLists.txt  README.md
scripts/: build_wasm.sh
src/: CMakeLists.txt  main.cpp
src/Utils/: AsciiArt.h  Console.h  RNG.cpp  RNG.h
src/combat/: CombatSystem.cpp  CombatSystem.h  Spell.h
src/core/: Bestiary.h  DevMode.cpp  DevMode.h  EnemyDescriptions.h  Game.cpp  Game.h  GameStats.h  Relic.h  Stats.h
src/dungeon/: Dungeon.cpp  Dungeon.h  Encounter.h  Perception.cpp  Perception.h  Room.h
src/entities/: Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/items/: Inventory.h  Item.h
src/platform/: WebConsole.cpp  WebConsole.h
web/game/: README.txt  index.html
